--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  height: 100vh;
+  background: lightblue;
 }
 
 .App-logo {
@@ -35,4 +37,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.fangs{
+  border: 2px solid black;
+  background-color: lightblue;
+  height: 200px;
+  width: 230px;
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+  border-radius: 30px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+.player{
+  background-color: goldenrod;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
 }
