--- a/src/App.css
+++ b/src/App.css
@@ -58,5 +58,15 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 129px;
+    padding-top: 66px;
 
 }
+
+.red{
+  color: red;
+  font-size: 50px;
+}
+
+
+
